  func_190926_b() will change soon for sure.
An empty ItemStack is ItemStack.field_190927_a - use this instead of Null for ItemStacks.

Block.getCollisionBoundingBox has changed signature to use IBlockAccess instead of World.  IBlockAccess is used for
   methods which are called by multithreaded access, typically chunk rendering (compiling rendering lists)
   or AI (entity decision logic)
Block.getSubBlocks signature change to use NonNullList
CreativeTabs.displayAllRelevantItems signature change to use NonNullList
Item.onItemRightClick: signature change.  get ItemStackIn from playerIn.getHeldItem(hand);
Block.onBlockActivated : signature change.  get held ItemStack from playerIn.getHeldItem(hand);
ItemStack stacksize is now private.  Access through:
   getter: func_190916_E() - this will change soon for sure!
   setter: func_190920_e() - this will change soon for sure!
   func_190917_f(int i) : increase stacksize by i
   func_190918_g(int i) : decrease stacksize by i
An empty ItemStack is ItemStack.field_190927_a - use this instead of Null for ItemStacks
ItemStack.loadItemStackFromNBT() has been changed to a constructor instead

Slot.onPickupFromSlot has changed to func_190901_a()

Blocks, Items, and Model Registry
https://github.com/LexManos/VoidUtils/blob/master/src/main/java/net/minecraftforge/lex/voidutils/VoidUtils.java
Block.neighborChanged() now has extra BlockPos for the neighbor block

Changes from 1.8.9 to 1.10.2

EntityPlayerMP.theItemInWorldManager -> EntityPlayerMP.interactionManager
BlockRenderLayer -> BlockRenderLayer
GameRegistry.findItem -> Item.REGISTRY.getObject(new ResourceLocation(...))
Material.rock etc have new names
CreativeTabs.blocks etc have new names


For better or for worse, they have changed the registration methods for blocks and items; ItemBlocks also require
  explicit registration of the Item (previously, Forge did it automatically).

BlockRenderLayer ->  BlockRenderLayer

BlockState has become BlockStateContainer
